# free_API

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.example.yaml  config.yaml
data/: router.db  router.db-journal  router.db.json  test.db  test.db-journal
src/free_llm_router/: __init__.py  __main__.py  catalog.py  catalog_seed.py  cli.py  clients.py  config.py  dashboard.py  health.py  router.py  scenario.py  schemas.py  server.py  store.py  wizard.py
src/free_llm_router/__pycache__/: __init__.cpython-38.pyc.1960407842128  __init__.cpython-38.pyc.2289204816048  __main__.cpython-38.pyc.1960407842128  __main__.cpython-38.pyc.2304493482288  catalog.cpython-38.pyc.1798535723824  catalog.cpython-38.pyc.1839727733040  catalog.cpython-38.pyc.1960407842128  catalog.cpython-38.pyc.2315397646128  catalog.cpython-38.pyc.2389597750704  catalog.cpython-38.pyc.2650433808688  catalog_seed.cpython-38.pyc.1583146020272  catalog_seed.cpython-38.pyc.1960407842128  catalog_seed.cpython-38.pyc.2315397646640  catalog_seed.cpython-38.pyc.2389597750192  catalog_seed.cpython-38.pyc.2396529914032  catalog_seed.cpython-38.pyc.2511621194288  catalog_seed.cpython-38.pyc.2748494606000  cli.cpython-38.pyc.1583087548336  cli.cpython-38.pyc.1960407842128  clients.cpython-38.pyc.1583147607216  clients.cpython-38.pyc.1960407842128  clients.cpython-38.pyc.2203635822128  clients.cpython-38.pyc.2315398564784  (+43 more)
tests/: test_router.py
tests/__pycache__/: test_router.cpython-38.pyc.1839727724336  test_router.cpython-38.pyc.1960407979472  test_router.cpython-38.pyc.2065328322352
